Added full GFCI reorientation to StarFciCheckPag.